--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -34,6 +34,7 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         SONAR_TARGET_BRANCH: ${{ secrets.SONAR_TARGET_BRANCH }}
+        SONAR_DISABLE_AUTOCONFIG: ${{ secrets.SONAR_DISABLE_AUTOCONFIG }}
       run: |
         sonar-scanner \
           -Dsonar.projectKey=refbrancherror \
@@ -43,4 +44,5 @@ jobs:
           -Dsonar.host.url=$SONAR_HOST_URL \
           -Dsonar.token=$SONAR_TOKEN \
           -Dsonar.branch.name=${{ github.ref_name }} \
-          -Dsonar.branch.target=$SONAR_TARGET_BRANCH
+          -Dsonar.branch.target=$SONAR_TARGET_BRANCH \
+          -Dsonar.branch.autoconfig.disabled=$SONAR_DISABLE_AUTOCONFIG
