--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -18,6 +18,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
       with:
+        ref: master
         fetch-depth: 0
     
     - name: Setup Java
