on the pr branch

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,15 +1,15 @@
 sonar.projectKey=refbrancherrorTemp
 sonar.projectName=refbrancherrorTemp
-sonar.projectVersion=1.0
-sonar.sources=.
+sonar.projectVersion=2.0
+sonar.sources=src
+sonar.python.version=3.12
+sonar.exclusions=**/*.properties,**/*.md,**/.git/**,**/.scannerwork/**
 sonar.host.url=http://localhost:9000
-sonar.token=sqa_a2b88aea184c2f9abec5c5b8035da2e28a7b1bf8
-sonar.branch.name=master
-sonar.pullrequest.key=121
-sonar.pullrequest.branch=NGSM-36684-migrate-to-sonarqube
-sonar.pullrequest.base=development
-sonar.pullrequest.github.repository=msicie/PNF_cirrus-node-status-storage
-#sonar.branch.target=main
-#sonar.projectCreation.mainBranchName=
+
+# Temporarily disable PR analysis to see ALL issues
+#sonar.pullrequest.key=121
+#sonar.pullrequest.branch=bug/testfeature
+#sonar.pullrequest.base=master
+#sonar.pullrequest.github.repository=manishahaulbert-csbytes/refbrancherror
 
 
